# swerve_drive

./: .gitignore  LICENSE  README.md
maxon_epos2/: CMakeLists.txt  package.xml
maxon_epos2/EPOS_Linux_Library/examples/HelloEposCmd/: HelloEposCmd  HelloEposCmd.cpp
maxon_epos2/EPOS_Linux_Library/include/: Definitions.h
maxon_epos2/include/maxon_epos2/: Definitions.h  EposCommunication.hpp  EposController.hpp  epos_communication.hpp  epos_controller.hpp
maxon_epos2/launch/: maxon_epos2.launch
maxon_epos2/msg/: MotorCmds.msg
maxon_epos2/src/: EposCommunication.cpp  EposController.cpp  epos_communication.cpp  epos_controller.cpp  epos_controller_node.cpp
mobile_base_msgs/: CMakeLists.txt  package.xml
mobile_base_msgs/msg/: MotorState.msg  MotorStates.msg  VehicleCmd.msg  VehicleState.msg  WheelDirection.msg
mobile_base_msgs/srv/: Calibration.srv
swerve_drive_description/: CMakeLists.txt  package.xml
swerve_drive_description/config/: joint_names_swerve_drive.yaml  ros_controllers.yaml
swerve_drive_description/config/iarc/: geometry_parameters.yaml  physical_parameters.yaml  visual_parameters.yaml
swerve_drive_description/config/yhs_fw01/: geometry_parameters.yaml  physical_parameters.yaml  visual_parameters.yaml
swerve_drive_description/launch/: display.launch  gazebo.launch  gazebo.launch.py  ros_controllers.launch
swerve_drive_description/meshes/: wheel_link.STL
swerve_drive_description/meshes/iarc/: swerve_link.STL
swerve_drive_description/meshes/yhs_fw01/: base_link_collision.STL  laser_link.dae  photoneo_link.STL  photoneo_pan_link.STL  swerve_link.STL  swerve_link_collision.STL  wheel_link.STL  wheel_link_collision.STL
swerve_drive_description/urdf/: load_swerve_drive.xacro  single_wheel.xacro  swerve_drive.gazebo.xacro  swerve_drive.ros2_control.xacro  swerve_drive.urdf  swerve_drive.xacro  swerve_drive_sensor.xacro  wheel.gazebo.xacro  wheel.ros2_control.xacro  wheel.transmission.xacro  wheel.xacro
swerve_drive_hardware/: CMakeLists.txt  package.xml  swerve_drive_hardware.xml
swerve_drive_hardware/include/swerve_drive_hardware/: maxon_ros_interface.h  visibility_control.h
swerve_drive_hardware/src/: maxon_ros_interface.cpp
vehicle_controller/: CMakeLists.txt  package.xml
vehicle_controller/config/: wheel_data.yaml
vehicle_controller/config/iarc/: vehicle_data.yaml
vehicle_controller/config/yhs_fw01/: vehicle_data.yaml
vehicle_controller/include/vehicle_controller/: kinematics.h  vehicle_control.h  vehicle_controller.h  vehicle_controller_define.h
vehicle_controller/launch/: load_multi_test.launch  single_controller_test.launch  vehicle_controller.launch  vehicle_controller.launch.py
vehicle_controller/msg/: Cmd.msg
vehicle_controller/src/: kinematics.cpp  vehicle_controller.cpp  vehicle_controller_node.cpp
wheel_controller/: CMakeLists.txt  package.xml
wheel_controller/config/: ros_controllers.yaml
wheel_controller/include/wheel_controller/: hardware_interface.h  joint_data.h  visibility_control.h  wheel_controller.h
wheel_controller/launch/: manipulator_maxon.launch  ros_controllers.launch  wheel_control.launch
wheel_controller/msg/: WheelState.msg
wheel_controller/script/: demo_task.py
wheel_controller/src/: hardware_interface.cpp  wheel_controller.cpp  wheel_controller_node.cpp
