<?xml version="1.0"?>
<package format="3">
  <name>maxon_epos2</name>
  <version>0.0.0</version>
  <description>The maxon_epos2 package</description>
  <maintainer email="N2107687J@e.ntu.edu.sg">andy</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD 3-Clause</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/maxon_epos2</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <build_depend>rosidl_default_generators</build_depend> -->
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>mobile_base_msgs</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
