<package format="3">
  <name>swerve_drive_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for swerve_drive_description</p>
    <p>This package contains configuration data, 3D models and launch files
for swerve_drive_description robot</p>
  </description>
  <author>Andy Chien</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <architecture_independent />
    <build_type>ament_cmake</build_type>
  </export>
</package>