<?xml version="1.0"?>
<package format="2">
  <name>vehicle_controller</name>
  <version>0.0.0</version>
  <description>The vehicle_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="andy@todo.todo">andy</maintainer>


  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>mobile_base_msgs</depend>
  <depend>wheel_controller</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rclcpp</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <architecture_independent />
    <build_type>ament_cmake</build_type>
  </export>
</package>
